# autoga

./: Auto_ga.py  CODE_REVIEW_REPORT.md  FIX_REPORT.md  LICENSE  README.md  __init__.py  chart.py  classifier.py  clusterer.py  duplicate_detector.py  encoder.py  encoder_example.py  exec.py  feature_selector.py  fitness_predictor.py  imputer.py  load_data.py  log_config.py  make_data.py  model_comparison.py  model_hyperparameters.yaml  my_encoder_encoders.pkl  my_encoder_info.json  myproject.yaml  normalizer.py  outlier_detector.py  preprocessing.py  pyproject.toml  range_adjuster.py  regressor.py  requirements.txt  setup.py  setup.sh  test.py
.setup/: Dockerfile  setup_env
.spyproject/config/backups/: workspace.ini.bak
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
datasets/: house_train.csv  source_dataset_with_issues.csv  target_dataset_with_issues.csv
